source/Cb/CFlatParser.py
# Generated from CFlat.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class CFlatParser ( Parser ):

    grammarFileName = "CFlat.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'__extension__'", "'_Generic'", "'~'", 
                     "'_Bool'", "'_Static_assert'", "'static'", "'...'", 
                     "'?'", "'break'", "'case'", "'char'", "'const'", "'continue'", 
                     "'default'", "'do'", "'double'", "'else'", "'extern'", 
                     "'float'", "'for'", "'goto'", "'if'", "'int'", "'long'", 
                     "'return'", "'short'", "'signed'", "'sizeof'", "'switch'", 
                     "'typedef'", "'unsigned'", "'void'", "'while'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", 
                     "'>='", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", 
                     "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", 
                     "':'", "';'", "','", "'='", "'=='", "'!='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Break", "Case", "Char", "Const", "Continue", 
                      "Default", "Do", "Double", "Else", "Extern", "Float", 
                      "For", "Goto", "If", "Int", "Long", "Return", "Short", 
                      "Signed", "Sizeof", "Switch", "Typedef", "Unsigned", 
                      "Void", "While", "LeftParen", "RightParen", "LeftBracket", 
                      "RightBracket", "LeftBrace", "RightBrace", "Less", 
                      "LessEqual", "Greater", "GreaterEqual", "Plus", "PlusPlus", 
                      "Minus", "MinusMinus", "Star", "Div", "Mod", "And", 
                      "Or", "AndAnd", "OrOr", "Caret", "Not", "Colon", "Semi", 
                      "Comma", "Assign", "Equal", "NotEqual", "Dot", "Identifier", 
                      "StringLiteral", "Whitespace", "Newline", "BlockComment", 
                      "LineComment" ]

    RULE_run = 0
    RULE_primaryExpression = 1
    RULE_genericSelection = 2
    RULE_genericAssocList = 3
    RULE_genericAssociation = 4
    RULE_typeName = 5
    RULE_specifierQualifierList = 6
    RULE_postfixExpression = 7
    RULE_argumentExpressionList = 8
    RULE_unaryExpression = 9
    RULE_unaryOperator = 10
    RULE_assignmentOperator = 11
    RULE_expression = 12
    RULE_assignmentExpression = 13
    RULE_multiplicativeExpression = 14
    RULE_additiveExpression = 15
    RULE_relationalExpression = 16
    RULE_equalityExpression = 17
    RULE_andExpression = 18
    RULE_exclusiveOrExpression = 19
    RULE_inclusiveOrExpression = 20
    RULE_logicalAndExpression = 21
    RULE_logicalOrExpression = 22
    RULE_typeSpecifier = 23
    RULE_typedefName = 24
    RULE_iterationStatement = 25
    RULE_jumpStatement = 26
    RULE_compoundStatement = 27
    RULE_blockItemList = 28
    RULE_blockItem = 29
    RULE_compilationUnit = 30
    RULE_translationUnit = 31
    RULE_declaration = 32
    RULE_staticAssertDeclaration = 33
    RULE_initDeclaratorList = 34
    RULE_externalDeclaration = 35
    RULE_functionDefinition = 36
    RULE_declarator = 37
    RULE_directDeclarator = 38
    RULE_identifierList = 39
    RULE_typeQualifierList = 40
    RULE_typeQualifier = 41
    RULE_parameterTypeList = 42
    RULE_parameterList = 43
    RULE_parameterDeclaration = 44
    RULE_declarationList = 45
    RULE_declarationSpecifiers = 46
    RULE_declarationSpecifiers2 = 47
    RULE_declarationSpecifier = 48
    RULE_storageClassSpecifier = 49
    RULE_initDeclarator = 50
    RULE_constantExpression = 51
    RULE_conditionalExpression = 52
    RULE_initializer = 53
    RULE_initializerList = 54
    RULE_designation = 55
    RULE_designatorList = 56
    RULE_designator = 57
    RULE_statement = 58
    RULE_expressionStatement = 59
    RULE_selectionStatement = 60
    RULE_labeledStatement = 61

    ruleNames =  [ "run", "primaryExpression", "genericSelection", "genericAssocList", 
                   "genericAssociation", "typeName", "specifierQualifierList", 
                   "postfixExpression", "argumentExpressionList", "unaryExpression", 
                   "unaryOperator", "assignmentOperator", "expression", 
                   "assignmentExpression", "multiplicativeExpression", "additiveExpression", 
                   "relationalExpression", "equalityExpression", "andExpression", 
                   "exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression", 
                   "logicalOrExpression", "typeSpecifier", "typedefName", 
                   "iterationStatement", "jumpStatement", "compoundStatement", 
                   "blockItemList", "blockItem", "compilationUnit", "translationUnit", 
                   "declaration", "staticAssertDeclaration", "initDeclaratorList", 
                   "externalDeclaration", "functionDefinition", "declarator", 
                   "directDeclarator", "identifierList", "typeQualifierList", 
                   "typeQualifier", "parameterTypeList", "parameterList", 
                   "parameterDeclaration", "declarationList", "declarationSpecifiers", 
                   "declarationSpecifiers2", "declarationSpecifier", "storageClassSpecifier", 
                   "initDeclarator", "constantExpression", "conditionalExpression", 
                   "initializer", "initializerList", "designation", "designatorList", 
                   "designator", "statement", "expressionStatement", "selectionStatement", 
                   "labeledStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    Break=9
    Case=10
    Char=11
    Const=12
    Continue=13
    Default=14
    Do=15
    Double=16
    Else=17
    Extern=18
    Float=19
    For=20
    Goto=21
    If=22
    Int=23
    Long=24
    Return=25
    Short=26
    Signed=27
    Sizeof=28
    Switch=29
    Typedef=30
    Unsigned=31
    Void=32
    While=33
    LeftParen=34
    RightParen=35
    LeftBracket=36
    RightBracket=37
    LeftBrace=38
    RightBrace=39
    Less=40
    LessEqual=41
    Greater=42
    GreaterEqual=43
    Plus=44
    PlusPlus=45
    Minus=46
    MinusMinus=47
    Star=48
    Div=49
    Mod=50
    And=51
    Or=52
    AndAnd=53
    OrOr=54
    Caret=55
    Not=56
    Colon=57
    Semi=58
    Comma=59
    Assign=60
    Equal=61
    NotEqual=62
    Dot=63
    Identifier=64
    StringLiteral=65
    Whitespace=66
    Newline=67
    BlockComment=68
    LineComment=69

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def translationUnit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CFlatParser.TranslationUnitContext)
            else:
                return self.getTypedRuleContext(CFlatParser.TranslationUnitContext,i)


        def getRuleIndex(self):
            return CFlatParser.RULE_run

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun" ):
                listener.enterRun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun" ):
                listener.exitRun(self)




    def run(self):

        localctx = CFlatParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_run)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.translationUnit(0)
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 4)) & ~0x3f) == 0 and ((1 << (_la - 4)) & ((1 << (CFlatParser.T__3 - 4)) | (1 << (CFlatParser.T__4 - 4)) | (1 << (CFlatParser.T__5 - 4)) | (1 << (CFlatParser.Char - 4)) | (1 << (CFlatParser.Double - 4)) | (1 << (CFlatParser.Float - 4)) | (1 << (CFlatParser.Int - 4)) | (1 << (CFlatParser.Long - 4)) | (1 << (CFlatParser.Short - 4)) | (1 << (CFlatParser.Signed - 4)) | (1 << (CFlatParser.Typedef - 4)) | (1 << (CFlatParser.Unsigned - 4)) | (1 << (CFlatParser.Void - 4)) | (1 << (CFlatParser.LeftParen - 4)) | (1 << (CFlatParser.Semi - 4)) | (1 << (CFlatParser.Identifier - 4)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CFlatParser.Identifier, 0)

        def StringLiteral(self, i:int=None):
            if i is None:
                return self.getTokens(CFlatParser.StringLiteral)
            else:
                return self.getToken(CFlatParser.StringLiteral, i)

        def expression(self):
            return self.getTypedRuleContext(CFlatParser.ExpressionContext,0)


        def genericSelection(self):
            return self.getTypedRuleContext(CFlatParser.GenericSelectionContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(CFlatParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return CFlatParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)




    def primaryExpression(self):

        localctx = CFlatParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primaryExpression)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(CFlatParser.Identifier)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 130
                        self.match(CFlatParser.StringLiteral)

                    else:
                        raise NoViableAltException(self)
                    self.state = 133 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(CFlatParser.LeftParen)
                self.state = 136
                self.expression(0)
                self.state = 137
                self.match(CFlatParser.RightParen)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.genericSelection()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                _la = self._input.LA(1)
                if _la==CFlatParser.T__0:
                    self.state = 140
                    self.match(CFlatParser.T__0)


                self.state = 143
                self.match(CFlatParser.LeftParen)
                self.state = 144
                self.compoundStatement()
                self.state = 145
                self.match(CFlatParser.RightParen)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GenericSelectionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(CFlatParser.AssignmentExpressionContext,0)


        def genericAssocList(self):
            return self.getTypedRuleContext(CFlatParser.GenericAssocListContext,0)


        def getRuleIndex(self):
            return CFlatParser.RULE_genericSelection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenericSelection" ):
                listener.enterGenericSelection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenericSelection" ):
                listener.exitGenericSelection(self)




    def genericSelection(self):

        localctx = CFlatParser.GenericSelectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_genericSelection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(CFlatParser.T__1)
            self.state = 150
            self.match(CFlatParser.LeftParen)
            self.state = 151
            self.assignmentExpression()
            self.state = 152
            self.match(CFlatParser.Comma)
            self.state = 153
            self.genericAssocList(0)
            self.state = 154
            self.match(CFlatParser.RightParen)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GenericAssocListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def genericAssociation(self):
            return self.getTypedRuleContext(CFlatParser.GenericAssociationContext,0)


        def genericAssocList(self):
            return self.getTypedRuleContext(CFlatParser.GenericAssocListContext,0)


        def getRuleIndex(self):
            return CFlatParser.RULE_genericAssocList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenericAssocList" ):
                listener.enterGenericAssocList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenericAssocList" ):
                listener.exitGenericAssocList(self)



    def genericAssocList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CFlatParser.GenericAssocListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_genericAssocList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.genericAssociation()
            self._ctx.stop = self._input.LT(-1)
            self.state = 164
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CFlatParser.GenericAssocListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_genericAssocList)
                    self.state = 159
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 160
                    self.match(CFlatParser.Comma)
                    self.state = 161
                    self.genericAssociation() 
                self.state = 166
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class GenericAssociationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(CFlatParser.TypeNameContext,0)


        def assignmentExpression(self):
            return self.getTypedRuleContext(CFlatParser.AssignmentExpressionContext,0)


        def getRuleIndex(self):
            return CFlatParser.RULE_genericAssociation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenericAssociation" ):
                listener.enterGenericAssociation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenericAssociation" ):
                listener.exitGenericAssociation(self)




    def genericAssociation(self):

        localctx = CFlatParser.GenericAssociationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_genericAssociation)
        try:
            self.state = 174
            token = self._input.LA(1)
            if token in [CFlatParser.T__3, CFlatParser.Char, CFlatParser.Double, CFlatParser.Float, CFlatParser.Int, CFlatParser.Long, CFlatParser.Short, CFlatParser.Signed, CFlatParser.Unsigned, CFlatParser.Void, CFlatParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.typeName()
                self.state = 168
                self.match(CFlatParser.Colon)
                self.state = 169
                self.assignmentExpression()

            elif token in [CFlatParser.Default]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(CFlatParser.Default)
                self.state = 172
                self.match(CFlatParser.Colon)
                self.state = 173
                self.assignmentExpression()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def specifierQualifierList(self):
            return self.getTypedRuleContext(CFlatParser.SpecifierQualifierListContext,0)


        def getRuleIndex(self):
            return CFlatParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)




    def typeName(self):

        localctx = CFlatParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.specifierQualifierList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SpecifierQualifierListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(CFlatParser.TypeSpecifierContext,0)


        def specifierQualifierList(self):
            return self.getTypedRuleContext(CFlatParser.SpecifierQualifierListContext,0)


        def getRuleIndex(self):
            return CFlatParser.RULE_specifierQualifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecifierQualifierList" ):
                listener.enterSpecifierQualifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecifierQualifierList" ):
                listener.exitSpecifierQualifierList(self)




    def specifierQualifierList(self):

        localctx = CFlatParser.SpecifierQualifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_specifierQualifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.typeSpecifier()
            self.state = 180
            _la = self._input.LA(1)
            if ((((_la - 4)) & ~0x3f) == 0 and ((1 << (_la - 4)) & ((1 << (CFlatParser.T__3 - 4)) | (1 << (CFlatParser.Char - 4)) | (1 << (CFlatParser.Double - 4)) | (1 << (CFlatParser.Float - 4)) | (1 << (CFlatParser.Int - 4)) | (1 << (CFlatParser.Long - 4)) | (1 << (CFlatParser.Short - 4)) | (1 << (CFlatParser.Signed - 4)) | (1 << (CFlatParser.Unsigned - 4)) | (1 << (CFlatParser.Void - 4)) | (1 << (CFlatParser.Identifier - 4)))) != 0):
                self.state = 179
                self.specifierQualifierList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(CFlatParser.PrimaryExpressionContext,0)


        def typeName(self):
            return self.getTypedRuleContext(CFlatParser.TypeNameContext,0)


        def initializerList(self):
            return self.getTypedRuleContext(CFlatParser.InitializerListContext,0)


        def postfixExpression(self):
            return self.getTypedRuleContext(CFlatParser.PostfixExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(CFlatParser.ExpressionContext,0)


        def argumentExpressionList(self):
            return self.getTypedRuleContext(CFlatParser.ArgumentExpressionListContext,0)


        def Identifier(self):
            return self.getToken(CFlatParser.Identifier, 0)

        def getRuleIndex(self):
            return CFlatParser.RULE_postfixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixExpression" ):
                listener.enterPostfixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixExpression" ):
                listener.exitPostfixExpression(self)



    def postfixExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CFlatParser.PostfixExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_postfixExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 183
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.state = 184
                self.match(CFlatParser.LeftParen)
                self.state = 185
                self.typeName()
                self.state = 186
                self.match(CFlatParser.RightParen)
                self.state = 187
                self.match(CFlatParser.LeftBrace)
                self.state = 188
                self.initializerList(0)
                self.state = 189
                self.match(CFlatParser.RightBrace)
                pass

            elif la_ == 3:
                self.state = 191
                self.match(CFlatParser.LeftParen)
                self.state = 192
                self.typeName()
                self.state = 193
                self.match(CFlatParser.RightParen)
                self.state = 194
                self.match(CFlatParser.LeftBrace)
                self.state = 195
                self.initializerList(0)
                self.state = 196
                self.match(CFlatParser.Comma)
                self.state = 197
                self.match(CFlatParser.RightBrace)
                pass

